--- a/notebooks/model.ipynb
+++ b/notebooks/model.ipynb
@@ -583,7 +583,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:gpd]",
+   "display_name": "Python [conda env:gpd] *",
    "language": "python",
    "name": "conda-env-gpd-py"
   },
