--- a/notebooks/scrub.ipynb
+++ b/notebooks/scrub.ipynb
@@ -4,14 +4,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Scrub"
+    "# Scrub\n",
+    "Handle any cleaning of data here. \n",
+    "\n",
+    "Issues that were discovered during EDA will be cleaned here."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## Duplicates"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## NaN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Outliers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
