--- a/notebooks/obtain.ipynb
+++ b/notebooks/obtain.ipynb
@@ -17,9 +17,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:gpd] *",
+   "display_name": "Python [conda env:tanzania] *",
    "language": "python",
-   "name": "conda-env-gpd-py"
+   "name": "conda-env-tanzania-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -31,7 +31,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
