--- a/notebooks/research.ipynb
+++ b/notebooks/research.ipynb
@@ -170,9 +170,36 @@
    "metadata": {},
    "source": [
     "### F1 score – What percent of positive predictions were correct? \n",
-    "The F1 score is a weighted harmonic mean of precision and recall such that the best score is 1.0 and the worst is 0.0. Generally speaking, F1 scores are lower than accuracy measures as they embed precision and recall into their computation. As a rule of thumb, the weighted average of F1 should be used to compare classifier models, not global accuracy.\n",
+    "The F1 score is a weighted harmonic mean of precision and recall such that the best score is 1.0 and the worst is 0.0. Generally speaking, F1 scores are lower than accuracy measures as they embed precision and recall into their computation. **As a rule of thumb, the weighted average of F1 should be used to compare classifier models, not global accuracy**.\n",
     "\n",
     "F1 Score = 2*(Recall * Precision) / (Recall + Precision)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Most important\n",
+    "Recall will be the metric to focus on, because saying a well will fail when it is still fine, is no biggie. \n",
+    "\n",
+    "Saying a well is working when its actually broken is a biggie."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualization Metrics\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Precision-Recall Curve\n",
+    "Precision-Recall curves should be used when there is a moderate to large class imbalance.\n",
+    "\n",
+    "Our dataset has a very large class imbalance, so we chose to use the precision-recall curve."
    ]
   },
   {
@@ -185,9 +212,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:gpd] *",
+   "display_name": "Python [conda env:tanzania] *",
    "language": "python",
-   "name": "conda-env-gpd-py"
+   "name": "conda-env-tanzania-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -199,7 +226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
