--- a/notebooks/model.ipynb
+++ b/notebooks/model.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
        "[5 rows x 40 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
        "4  19728      functional"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,25 +349,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = features_df"
+    "clean_df = pd.read_csv('../data/clean/tanzania.csv', index_col=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = target_df['status_group'].replace({'functional': 0, 'non functional': 1, 'functional needs repair': 2}).astype(int)"
+    "X = clean_df.drop('target', axis=1)\n",
+    "y = clean_df['target']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# X = features_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# y = target_df['status_group'].replace({'functional': 0, 'non functional': 1, 'functional needs repair': 2}).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +398,7 @@
        "Name: status_group, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,25 +419,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['id',\n",
-       " 'amount_tsh',\n",
-       " 'gps_height',\n",
+       "['funder',\n",
+       " 'installer',\n",
+       " 'basin',\n",
+       " 'subvillage',\n",
+       " 'region',\n",
+       " 'scheme_management',\n",
+       " 'permit',\n",
+       " 'extraction_type',\n",
+       " 'management',\n",
+       " 'payment_type',\n",
+       " 'water_quality',\n",
+       " 'quantity',\n",
+       " 'source',\n",
+       " 'waterpoint_type']"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "categorical_cols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['gps_height',\n",
        " 'longitude',\n",
        " 'latitude',\n",
-       " 'num_private',\n",
-       " 'region_code',\n",
        " 'district_code',\n",
        " 'population',\n",
        " 'construction_year']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,6 +634,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Cleaned Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## LinearSVC"
    ]
   },
@@ -611,12 +666,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "param_dict = {\n",
-    "    'model__max_iter': [500, 1000]\n",
+    "    'model__C': [0.1,1, 10, 100], \n",
+    "    'model__tol': [1,0.1,0.01,0.001],\n",
+    "    'model__max_iter': [10000],\n",
+    "    'model__penalty': ['l1', 'l2']\n",
     "}"
    ]
   },
@@ -629,23 +687,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/yrgg/opt/anaconda3/envs/gpd/lib/python3.7/site-packages/sklearn/svm/_base.py:947: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
-      "  \"the number of iterations.\", ConvergenceWarning)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best parameter (CV score=0.772):\n",
-      "{'model__max_iter': 500}\n"
+      "Best parameter (CV score=0.779):\n",
+      "{'model__C': 0.1, 'model__max_iter': 10000, 'model__tol': 0.1}\n"
      ]
     }
    ],
@@ -668,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -677,33 +727,33 @@
      "text": [
       "Model: LinearSVC\n",
       "------------------------------------------------------------\n",
-      "test accuracy: 0.7785185185185185\n",
-      "train accuracy: 0.9828058361391695\n",
+      "test accuracy: 0.7796149490373726\n",
+      "train accuracy: 0.8377062176752614\n",
       "------------------------------------------------------------\n",
       "\n",
       "test report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.80      0.85      0.82      8098\n",
-      "           1       0.79      0.76      0.78      5678\n",
-      "           2       0.47      0.32      0.38      1074\n",
+      "           0       0.77      0.90      0.83      4875\n",
+      "           1       0.56      0.15      0.24       622\n",
+      "           2       0.81      0.72      0.76      3333\n",
       "\n",
-      "    accuracy                           0.78     14850\n",
-      "   macro avg       0.69      0.65      0.66     14850\n",
-      "weighted avg       0.77      0.78      0.77     14850\n",
+      "    accuracy                           0.78      8830\n",
+      "   macro avg       0.71      0.59      0.61      8830\n",
+      "weighted avg       0.77      0.78      0.76      8830\n",
       "\n",
       "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
       "\n",
       "train report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.98      0.99      0.99     24161\n",
-      "           1       0.99      0.98      0.98     17146\n",
-      "           2       0.98      0.94      0.96      3243\n",
+      "           0       0.82      0.94      0.88     14726\n",
+      "           1       0.81      0.24      0.37      1834\n",
+      "           2       0.88      0.79      0.83      9929\n",
       "\n",
-      "    accuracy                           0.98     44550\n",
-      "   macro avg       0.98      0.97      0.98     44550\n",
-      "weighted avg       0.98      0.98      0.98     44550\n",
+      "    accuracy                           0.84     26489\n",
+      "   macro avg       0.83      0.66      0.69     26489\n",
+      "weighted avg       0.84      0.84      0.82     26489\n",
       "\n",
       "------------------------------------------------------------\n"
      ]
@@ -730,7 +780,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:gpd] *",
+   "display_name": "Python [conda env:gpd]",
    "language": "python",
    "name": "conda-env-gpd-py"
   },
