--- a/notebooks/research.ipynb
+++ b/notebooks/research.ipynb
@@ -199,7 +199,16 @@
     "### Precision-Recall Curve\n",
     "Precision-Recall curves should be used when there is a moderate to large class imbalance.\n",
     "\n",
-    "Our dataset has a very large class imbalance, so we chose to use the precision-recall curve."
+    "Our dataset has a very large class imbalance, so we chose to use the precision-recall curve.\n",
+    "\n",
+    "[https://machinelearningmastery.com/roc-curves-and-precision-recall-curves-for-imbalanced-classification](https://machinelearningmastery.com/roc-curves-and-precision-recall-curves-for-imbalanced-classification/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Confusion Matrix"
    ]
   },
   {
