--- a/notebooks/obtain.ipynb
+++ b/notebooks/obtain.ipynb
@@ -4,7 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Obtain"
+    "# Obtain\n",
+    "Downloading datasets and saving in the data/raw folder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = '../src/data/get_data.py'"
    ]
   },
   {
