--- a/notebooks/scrub.ipynb
+++ b/notebooks/scrub.ipynb
@@ -16,7 +16,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -34,7 +35,7 @@
    "source": [
     "features_df = pd.read_csv('../data/raw/X_train.csv')\n",
     "target_df = pd.read_csv('../data/raw/y_train.csv')\n",
-    "df = features_df.set_index('id').join(target_df.set_index('id'))"
+    "df = features_df.set_index('id').join(target_df.set_index('id')).reset_index()"
    ]
   },
   {
@@ -118,33 +119,74 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "to_drop = ['amount_tsh', 'date_recorded', 'id', 'wpt_name', \n",
+    "           'num_private', 'region_code', 'lga', \n",
+    "           'ward', 'public_meeting', 'recorded_by',\n",
+    "           'payment', 'extraction_type_group',\n",
+    "           'extraction_type_class', 'management_group',\n",
+    "           'quality_group', 'quantity_group', 'source_type',\n",
+    "           'source_class', 'waterpoint_type_group', 'status_group',\n",
+    "           'scheme_name'\n",
+    "          ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    58643\n",
-       "6       81\n",
-       "1       73\n",
-       "5       46\n",
-       "8       46\n",
-       "Name: num_private, dtype: int64"
+       "21"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['num_private'].value_counts().head()"
+    "len(to_drop)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **amount_tsh**: 70% of this column is 0's.\n",
+    "- **id**: Dropping Id because it contains all unique values.\n",
+    "- **date_recorded**: Is the date the row was entered, and was used to log when creating the dataset.\n",
+    "- **wpt_name**: The chosen name of the water well. Has no correlation to the functionality of the well.\n",
+    "- **num_private**: This column had no description with the dataset.\n",
+    "- **region_code**: Dropped because it indicates the same thing as region.\n",
+    "- **lga**: Geographic area.\n",
+    "- **ward**: Another geographic area. Dropping because there are numerous geographic area columns.\n",
+    "- **public_meeting**: Assumed this is an indicator for people gathering at the well, but it is unclear and there are a lot of missing values.\n",
+    "- **recorded_by**: The company who recorded the information. Is the same value for the entire dataset, so removing it.\n",
+    "- **payment**: Supposed to indicate the payment, but instead is just a copy of the payment_type.\n",
+    "- **extraction_type_group**: Most of these are copies of the extraction_group.\n",
+    "- **extraction_type_class**: Less specific version of extraction_type_group.\n",
+    "- **management_group**: Highly correlated with management.\n",
+    "- **quality_group**: Less specific version of quality.\n",
+    "- **quantity_group**: Duplicate of quantity column.\n",
+    "- **source_type**: Less specific version of source.\n",
+    "- **source_class**: Much less specific version of source.\n",
+    "- **waterpoint_type_group**: Less specific version of waterpoint_type.\n",
+    "- **status_group**: Categorical version of our target column.\n",
+    "- **scheme_name**: Has 36% missing values, and also is very similar to scheme_management\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = df.drop(to_drop, axis=1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -157,8 +199,92 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## NaN"
+    "## Zeros or Missing Values\n",
+    "Two types of missing columns, columns that are missing less than 10%, and columns that are missing more than 30%.\n",
+    "\n",
+    "Imputing:\n",
+    "- **funder**: Most commmon (mode) will add 3k rows funded by the gov't.\n",
+    "- **installer**: Most common (mode), DWE is the installer for the majority of the wells.\n",
+    "- **scheme_management**: Most common (mode), because one management company has majority of wells.\n",
+    "- **permit**: Drop missing values, because it is a boolean.\n",
+    "- **construction_year**: Dropping next three columns because they are all missing the same rows.\n",
+    "- **gps_height**: ''\n",
+    "- **population**: ''"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mode_impute = ['funder', 'installer', 'scheme_management']\n",
+    "to_drop = ['construction_year', 'gps_height', 'population', 'permit']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[(df['construction_year'] > 0) & (df['population'] > 0) & (df['gps_height'] > 0)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.impute import SimpleImputer\n",
+    "mode_imputer = SimpleImputer(missing_values=np.nan, strategy='most_frequent')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[mode_impute] = mode_imputer.fit_transform(df[mode_impute])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True     24349\n",
+       "False     9046\n",
+       "Name: permit, dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['permit'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.dropna()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -176,12 +302,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv('../data/clean/tanzania.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
