--- a/notebooks/research.ipynb
+++ b/notebooks/research.ipynb
@@ -43,17 +43,11 @@
    "metadata": {},
    "source": [
     "Favorite Classification Models:\n",
-    "- Xgboost\n",
-    "- LightGBM\n",
-    "- Random Forest\n",
-    "- Extra Trees\n",
+    "- LinearSVC\n",
     "- k-NN\n",
-    "- Logistic Regression\n",
-    "- Naïve Bayes Classifier Algorithm\n",
-    "- K Means Clustering Algorithm\n",
     "- Support Vector Machine Algorithm\n",
-    "- Apriori Algorithm\n",
-    "- Decision Trees"
+    "- XGBoost\n",
+    "- Random Forest"
    ]
   },
   {
@@ -68,32 +62,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Naïve Bayes Classifier Algorithm**:\n",
-    "Does not have any hyperparameters to fit, which is why it generalizes very well"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Logistic Regression**\n",
-    "- **solver**: Algorithm to use in the optimization problem.\n",
-    "    - For small datasets, ‘liblinear’ is a good choice, whereas ‘sag’ and ‘saga’ are faster for large ones.\n",
-    "    - For multiclass problems, only ‘newton-cg’, ‘sag’, ‘saga’ and ‘lbfgs’ handle multinomial loss; ‘liblinear’ is limited to one-versus-rest schemes.\n",
-    "    - ‘newton-cg’, ‘lbfgs’, ‘sag’ and ‘saga’ handle L2 or no penalty\n",
-    "    - ‘liblinear’ and ‘saga’ also handle L1 penalty\n",
-    "    - ‘saga’ also supports ‘elasticnet’ penalty\n",
-    "    - ‘liblinear’ does not support setting penalty='none'\n",
-    "- **C**: 'Inverse of regularization strength; must be a positive float. Like in support vector machines, smaller values specify stronger regularization'\n",
-    "- **penalty**: 'Used to specify the norm used in the penalization. The ‘newton-cg’, ‘sag’ and ‘lbfgs’ solvers support only l2 penalties. ‘elasticnet’ is only supported by the ‘saga’ solver. If ‘none’ (not supported by the liblinear solver), no regularization is applied."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "**k-NN** \n",
-    "- **k**: decreasing K decreases bias and increases variance, which leads to a more complex model\n",
+    "- **n_neighbors**: decreasing K decreases bias and increases variance, which leads to a more complex model\n",
     "- **leaf_size**: 'determines how many observations are captured in each leaf of either the BallTree of KDTree algorithms, which ultimately make the classification. The default equals 30. You can tune leaf_size by passing in a range of integers, like n_neighbors, to find the optimal leaf size. It is important to note that leaf_size can have a serious effect on run time and memory usage. Because of this, you tend not to run it on leaf_sizes smaller than 30 (smaller leafs equates to more leafs)'\n",
     "- **weights**: 'is the function that weights the data when making a prediction. “Uniform” is an equal weighted function, while “distance” weights the points by the inverse of their distance (i.e., location matters!). Utilizing the “distance” function will result in closer data points having a more significant influence on the classification'\n",
     "- **metric**: 'can be set to various distance metrics (see here) like Manhattan, Euclidean, Minkowski, or weighted Minkowski (default is “minkowski” with a p=2, which is the Euclidean distance). Which metric you choose is heavily dependent on what question you are trying to answer'"
@@ -209,6 +179,22 @@
    "metadata": {},
    "source": [
     "### Confusion Matrix"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Methodology"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ROSEMED"
    ]
   },
   {
