--- a/notebooks/research.ipynb
+++ b/notebooks/research.ipynb
@@ -20,14 +20,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dataset Features"
+    "## Dataset Features\n",
+    "TODO"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Well Info"
+    "## Well Info\n",
+    "TODO: "
    ]
   },
   {
@@ -178,14 +180,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Confusion Matrix"
+    "### Confusion Matrix\n",
+    "A confusion matrix is a table that is often used to describe the performance of a classification model (or “classifier”) on a set of test data for which the true values are known. It allows the visualization of the performance of an algorithm.\n",
+    "\n",
+    "[https://www.geeksforgeeks.org/confusion-matrix-machine-learning/](https://www.geeksforgeeks.org/confusion-matrix-machine-learning/)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Methodology"
+    "## Methodology\n",
+    "This project was built using th ROSEMED methodology.\n",
+    "- **'R'**: Research the domain and relevant data science tools\n",
+    "- **'O'**: Obtain the data\n",
+    "- **'S'**: Scrub the data and remove any NaNs, missing values, duplicates, or outliers\n",
+    "- **'E'**: Explore the data and look for correlations and insights\n",
+    "- **'M'**: Model the data using the most relevant classifiers for the data\n",
+    "- **'E'**: Evaluate the models and choose the model that is most suitable for the data\n",
+    "- **'D'**: Deploy the models"
    ]
   },
   {
@@ -194,7 +207,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ROSEMED"
+    "#"
    ]
   },
   {
