--- a/notebooks/obtain.ipynb
+++ b/notebooks/obtain.ipynb
@@ -22,7 +22,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!python path"
+   ]
   }
  ],
  "metadata": {
