--- a/notebooks/scrub.ipynb
+++ b/notebooks/scrub.ipynb
@@ -321,12 +321,108 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Save to CSV "
+    "## Feature Engineering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Construction Year\n",
+    "TODO: create age column, and graph it"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean      1996.926925\n",
+      "median    2000.000000\n",
+      "Name: construction_year, dtype: float64\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2008    2360\n",
+       "2010    2242\n",
+       "2009    2223\n",
+       "2007    1411\n",
+       "2006    1293\n",
+       "Name: construction_year, dtype: int64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check stats\n",
+    "print(df[df['construction_year'] != 0]['construction_year'].agg(['mean', 'median']))\n",
+    "df['construction_year'].value_counts().head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    18610\n",
+       "2    12438\n",
+       "1     2315\n",
+       "Name: target, dtype: int64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# if we cut out all the zeros, what does our target look like\n",
+    "df[(df['construction_year'] > 0)]['target'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime\n",
+    "# age = current_date - construction_year\n",
+    "current_date = datetime.now().year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['age'] = current_date - df['construction_year']\n",
+    "df = df.drop(['construction_year'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Save to CSV "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
