--- a/notebooks/scrub.ipynb
+++ b/notebooks/scrub.ipynb
@@ -33,7 +33,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# test_features_df = pd.read_csv('../data/raw/X_test.csv')\n",
     "features_df = pd.read_csv('../data/raw/X_train.csv')\n",
+    "# features_df = test_features_df.append(train_features_df)\n",
     "target_df = pd.read_csv('../data/raw/y_train.csv')\n",
     "df = features_df.set_index('id').join(target_df.set_index('id')).reset_index()"
    ]
@@ -61,10 +63,10 @@
     {
      "data": {
       "text/plain": [
-       "0    0.543081\n",
-       "2    0.384242\n",
-       "1    0.072677\n",
-       "Name: target, dtype: float64"
+       "0    32259\n",
+       "2    22824\n",
+       "1     4317\n",
+       "Name: target, dtype: int64"
       ]
      },
      "execution_count": 3,
@@ -75,7 +77,7 @@
    "source": [
     "df['status_group'] = df['status_group'].astype('category')\n",
     "df['target'] = df['status_group'].cat.codes\n",
-    "df['target'].value_counts(normalize=True)"
+    "df['target'].value_counts(normalize=False)"
    ]
   },
   {
@@ -105,7 +107,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Dropping Useless Columns"
+    "### Dropping Columns"
    ]
   },
   {
@@ -128,7 +130,7 @@
     "           'extraction_type_class', 'management_group',\n",
     "           'quality_group', 'quantity_group', 'source_type',\n",
     "           'source_class', 'waterpoint_type_group', 'status_group',\n",
-    "           'scheme_name'\n",
+    "           'scheme_name', 'subvillage', 'funder', 'installer',\n",
     "          ]"
    ]
   },
@@ -140,7 +142,7 @@
     {
      "data": {
       "text/plain": [
-       "21"
+       "24"
       ]
      },
      "execution_count": 6,
@@ -176,7 +178,10 @@
     "- **source_class**: Much less specific version of source.\n",
     "- **waterpoint_type_group**: Less specific version of waterpoint_type.\n",
     "- **status_group**: Categorical version of our target column.\n",
-    "- **scheme_name**: Has 36% missing values, and also is very similar to scheme_management\n"
+    "- **scheme_name**: Has 36% missing values, and also is very similar to scheme_management\n",
+    "- **subvillage**: Has 10k unique values\n",
+    "- **funder**: High cardinality\n",
+    "- **installer**: High cardinality"
    ]
   },
   {
@@ -242,13 +247,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Loop through columns and change 'unknown' or 'other' to NaNs"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mode_impute = ['funder', 'installer', 'scheme_management']\n",
-    "to_drop = ['construction_year', 'gps_height', 'population', 'permit']"
+    "df = df.replace(['unknown', 'other'], np.nan)"
    ]
   },
   {
@@ -257,12 +268,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df[(df['construction_year'] > 0) & (df['population'] > 0) & (df['gps_height'] > 0)]"
+    "mode_impute = ['scheme_management']\n",
+    "to_drop = ['construction_year', 'gps_height', 'population', 'permit']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[(df['construction_year'] > 0) & (df['population'] > 1) & (df['gps_height'] > 0)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,18 +302,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True     24327\n",
-       "False     9046\n",
+       "True     19853\n",
+       "False     7840\n",
        "Name: permit, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,11 +324,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = df.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    13412\n",
+       "2     5380\n",
+       "1     1579\n",
+       "Name: target, dtype: int64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['target'].value_counts(normalize=False)"
    ]
   },
   {
@@ -334,30 +378,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean      1996.926925\n",
-      "median    2000.000000\n",
+      "mean      1998.233273\n",
+      "median    2002.000000\n",
       "Name: construction_year, dtype: float64\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "2008    2360\n",
-       "2010    2242\n",
-       "2009    2223\n",
-       "2007    1411\n",
-       "2006    1293\n",
+       "2008    1662\n",
+       "2010    1615\n",
+       "2009    1571\n",
+       "2007     986\n",
+       "2006     910\n",
        "Name: construction_year, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,19 +414,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    18610\n",
-       "2    12438\n",
-       "1     2315\n",
+       "0    13412\n",
+       "2     5380\n",
+       "1     1579\n",
        "Name: target, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,21 +438,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "from datetime import datetime\n",
     "# age = current_date - construction_year\n",
-    "current_date = datetime.now().year"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "current_date = datetime.now().year\n",
     "df['age'] = current_date - df['construction_year']\n",
     "df = df.drop(['construction_year'], axis=1)"
    ]
@@ -422,12 +458,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv('../data/clean/tanzania.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
