--- a/notebooks/scrub.ipynb
+++ b/notebooks/scrub.ipynb
@@ -123,9 +123,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "to_drop = ['amount_tsh', 'date_recorded', 'id', 'wpt_name', \n",
+    "to_drop = ['amount_tsh', 'date_recorded', 'id',\n",
     "           'num_private', 'region_code', 'lga', \n",
-    "           'ward', 'public_meeting', 'recorded_by',\n",
+    "           'ward', 'recorded_by',\n",
     "           'payment', 'extraction_type_group',\n",
     "           'extraction_type_class', 'management_group',\n",
     "           'quality_group', 'quantity_group', 'source_type',\n",
@@ -142,7 +142,7 @@
     {
      "data": {
       "text/plain": [
-       "24"
+       "22"
       ]
      },
      "execution_count": 6,
@@ -339,9 +339,9 @@
     {
      "data": {
       "text/plain": [
-       "0    13412\n",
-       "2     5380\n",
-       "1     1579\n",
+       "0    12955\n",
+       "2     5187\n",
+       "1     1563\n",
        "Name: target, dtype: int64"
       ]
      },
@@ -385,7 +385,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean      1998.233273\n",
+      "mean      1998.092362\n",
       "median    2002.000000\n",
       "Name: construction_year, dtype: float64\n"
      ]
@@ -393,11 +393,11 @@
     {
      "data": {
       "text/plain": [
-       "2008    1662\n",
-       "2010    1615\n",
-       "2009    1571\n",
-       "2007     986\n",
-       "2006     910\n",
+       "2008    1642\n",
+       "2009    1561\n",
+       "2010    1404\n",
+       "2007     981\n",
+       "2006     902\n",
        "Name: construction_year, dtype: int64"
       ]
      },
@@ -420,9 +420,9 @@
     {
      "data": {
       "text/plain": [
-       "0    13412\n",
-       "2     5380\n",
-       "1     1579\n",
+       "0    12955\n",
+       "2     5187\n",
+       "1     1563\n",
        "Name: target, dtype: int64"
       ]
      },
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
